A little bit nicer tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,10 @@
 # tmux config file
 # Place this in ~/.tmux.conf 
 
-set -g status-bg green
+#set -g status-bg colour235
+set-option -g status-bg colour235 #base02
+set-option -g status-fg green
+set-option -g status-attr dim 
 set -g window-status-current-attr "underscore"
 
 set -g base-index 1
@@ -9,6 +12,18 @@ set -g pane-base-index 1
 
 set -g default-terminal screen-256color
 set -g pane-active-border-fg yellow
+set -g window-style 'fg=colour240'
+set -g window-active-style 'fg=colour254'
 
 bind-key v split-window -h
 bind-key h split-window -v
+
+set-window-option -g window-status-fg brightyellow #base0
+set-window-option -g window-status-bg colour236 
+set-window-option -g window-status-attr dim
+
+set-window-option -g window-status-current-fg brightgreen
+set-window-option -g window-status-current-bg colour236 
+set-window-option -g window-status-current-attr bright
+
+set -g status-left "#[fg=white]#S "
