More explicit comments

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,7 @@ set-option -g status-fg green
 set-option -g status-attr dim 
 set -g window-status-current-attr "underscore"
 
+# Start indexes in 1 instead of 0
 set -g base-index 1
 set -g pane-base-index 1
 
@@ -15,6 +16,7 @@ set -g pane-active-border-fg yellow
 set -g window-style 'fg=colour240'
 set -g window-active-style 'fg=colour254'
 
+# Keybinds to split the panes-
 bind-key v split-window -h
 bind-key h split-window -v
 
