--- a/tmux.conf
+++ b/tmux.conf
@@ -2,17 +2,15 @@
 # Place this in ~/.tmux.conf 
 
 #set -g status-bg colour235
-set-option -g status-bg colour235 #base02
-set-option -g status-fg green
-set-option -g status-attr dim 
-set -g window-status-current-attr "underscore"
+set-option -g status-style 'fg=green bg=colour235 dim'
+set -g window-status-current-style "underscore"
 
 # Start indexes in 1 instead of 0
 set -g base-index 1
 set -g pane-base-index 1
 
 set -g default-terminal screen-256color
-set -g pane-active-border-fg yellow
+set -g pane-active-border-style 'fg=yellow'
 set -g window-style 'fg=colour240'
 set -g window-active-style 'fg=colour254'
 
@@ -20,12 +18,9 @@ set -g window-active-style 'fg=colour254'
 bind-key v split-window -h
 bind-key h split-window -v
 
-set-window-option -g window-status-fg brightyellow #base0
-set-window-option -g window-status-bg colour236 
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style 'fg=brightyellow bg=colour236 dim'
 
-set-window-option -g window-status-current-fg brightgreen
-set-window-option -g window-status-current-bg colour236 
-set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style 'fg=brightgreen bg=colour236'
+set-window-option -g window-status-current-style bright
 
 set -g status-left "#[fg=white]#S "
